# yanga-core

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/: conf.py  index.md
docs/explanation/: architecture.md  concepts.md  design-decisions.md  index.md
docs/how-to/: configure-dependencies.md  contributing.md  create-custom-step.md  create-variant.md  feature-model.md  index.md
docs/reference/: api.md  cli.md  coding-guidelines.md  configuration.md  domain-model.md  index.md  pipeline.md  steps.md
docs/tutorials/: getting-started.md  index.md
src/yanga_core/: ini.py
src/yanga_core/commands/: base.py  cppcheck_report.py  info.py  info_schema.py  report_config.py  run.py
src/yanga_core/docs/: sphinx.py
src/yanga_core/domain/: components.py  config.py  config_slurper.py  config_utils.py  execution_context.py  generated_file.py  project_slurper.py  spl_paths.py
src/yanga_core/steps/: generate_report_config.py  kconfig_gen.py  poks_install.py  scoop_install.py  scoop_install_base.py  west_install.py
tests/: conftest.py  test_component_aliases.py  test_config_file.py  test_config_slurper.py  test_config_utils.py  test_cppcheck_report.py  test_file_slurper.py  test_fix_html_links.py  test_generate_report_config.py  test_include_directories_resolver.py  test_info_command.py  test_ini.py  test_kconfig_gen.py  test_platform_config.py  test_poks_install.py  test_project_slurper.py  test_scoop_install.py  test_scoop_install_base.py  test_spl_paths.py  test_stringable_enum.py  test_west_install.py  test_yanga_user_config.py  utils.py
tests/data/info_command/: yanga.yaml  yanga_info.json
